[project]
name = "mod_cipher"
version = "0.1.0"
description = "Embed arbitrary payloads into a 4-channel ProTracker .MOD using 2-tone chord modulation; optional zstd compression and Argon2id/XChaCha20-Poly1305 encryption."
license = "CC0-1.0"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mod", "protracker", "chiptune", "steganography", "encryption", "zstd"]

dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/lggcs/mod_cipher"
Repository = "https://github.com/lggcs/mod_cipher"

# Optional feature sets for extra functionality
[project.optional-dependencies]
crypto = [
  "argon2-cffi>=21.3.0",
  "PyNaCl>=1.5.0"
]
zstd = [
  "zstandard>=0.19.0"
]

[project.scripts]
mod-cipher = "mod_cipher:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
